feat(order-service): Add custom exception/global handler/DTO validation