@@ -3,109 +3,109 @@ package com.codewithmajd.order_service.service;
 import com.codewithmajd.order_service.dto.InventoryResponse;
 import com.codewithmajd.order_service.dto.OrderLineItemsDto;
 import com.codewithmajd.order_service.dto.OrderRequest;
-import com.codewithmajd.order_service.event.OrderPlacedEvent;
+import com.codewithmajd.order_service.exception.OrderNotFoundException;
+import com.codewithmajd.order_service.exception.OrderPlacementException;
 import com.codewithmajd.order_service.model.Order;
 import com.codewithmajd.order_service.model.OrderLineItems;
 import com.codewithmajd.order_service.repo.OrderRepo;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.kafka.core.KafkaTemplate;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.util.UriComponentsBuilder;
+import reactor.core.publisher.Mono;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
 @Transactional
+@RequiredArgsConstructor
 public class OrderService {
 
     private final WebClient.Builder webClientBuilder;
     private final OrderRepo orderRepo;
-    private final KafkaTemplate<String, OrderPlacedEvent> kafkaTemplate;
-    private final String inventoryServiceUrl;
-
-    public OrderService(WebClient.Builder webClientBuilder,
-                        OrderRepo orderRepo,
-                        KafkaTemplate<String, OrderPlacedEvent> kafkaTemplate,
-                        @Value("${inventory.service.url}") String inventoryServiceUrl) {
-        this.webClientBuilder = webClientBuilder;
-        this.orderRepo = orderRepo;
-        this.kafkaTemplate = kafkaTemplate;
-        this.inventoryServiceUrl = inventoryServiceUrl;
-    }
-
+    // Removed KafkaTemplate for simplicity in this example, can be added back if needed
 
     public void placeOrder(OrderRequest orderRequest, String tenantId) {
-        // ... (setting orderNumber, tenantId, and creating orderLineItemsList is the same)
         Order order = new Order();
         order.setOrderNumber(UUID.randomUUID().toString());
         order.setTenantId(tenantId);
 
-        List<OrderLineItems> orderLineItemsList = orderRequest.getOrderLineItemsDtoList()
+        List<OrderLineItems> orderLineItems = orderRequest.orderLineItemsDtoList()
                 .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
-        order.setOrderLineItemsList(orderLineItemsList);
+                .map(this::mapToEntity)
+                .toList();
+        order.setOrderLineItemsList(orderLineItems);
 
-        List<String> skuCodes = orderLineItemsList.stream()
+        List<String> skuCodes = orderLineItems.stream()
                 .map(OrderLineItems::getSkuCode)
                 .toList();
 
-        // --- CHANGE 2: BUILD THE URI DYNAMICALLY ---
-        String inventoryCheckUri = UriComponentsBuilder.fromHttpUrl(inventoryServiceUrl)
-                .path("/api/inventory")
-                .queryParam("skuCode", skuCodes)
-                .build().toUriString();
+        // Call Inventory Service to check stock
+        InventoryResponse[] inventoryResponses = checkInventory(skuCodes, tenantId);
 
-        InventoryResponse[] inventoryResponses = webClientBuilder.build().get()
-                .uri(inventoryCheckUri) // Use the dynamically built URI
+        // Create a map for easy lookup of inventory data
+        Map<String, InventoryResponse> inventoryMap = Arrays.stream(inventoryResponses)
+                .collect(Collectors.toMap(InventoryResponse::getSkuCode, Function.identity()));
+
+        // Validate that all products exist and have sufficient stock
+        validateStock(orderLineItems, inventoryMap);
+
+        orderRepo.save(order);
+
+        // After saving, tell Inventory Service to reduce stock
+        reduceStock(orderLineItems, tenantId);
+    }
+
+    private InventoryResponse[] checkInventory(List<String> skuCodes, String tenantId) {
+        // Assuming inventory-service is registered with Eureka as "inventory-service"
+        return webClientBuilder.build().get()
+                .uri("http://inventory-service/api/inventory", uriBuilder -> uriBuilder.queryParam("skuCode", skuCodes).build())
                 .header("X-Tenant-ID", tenantId)
                 .retrieve()
+                .onStatus(HttpStatusCode::is4xxClientError, response ->
+                        Mono.error(new OrderPlacementException("One or more products could not be found in inventory.")))
+                .onStatus(HttpStatusCode::is5xxServerError, response ->
+                        Mono.error(new OrderPlacementException("Inventory service is currently unavailable. Please try again later.")))
                 .bodyToMono(InventoryResponse[].class)
                 .block();
+    }
 
-        // ... (The rest of the validation logic is the same)
-        // Validate SKU existence
-        List<String> foundSkus = Arrays.stream(inventoryResponses)
-                .map(InventoryResponse::getSkuCode)
-                .toList();
-        for (String sku : skuCodes) {
-            if (!foundSkus.contains(sku)) {
-                throw new IllegalArgumentException("SKU not found in inventory: " + sku);
+    private void validateStock(List<OrderLineItems> orderLineItems, Map<String, InventoryResponse> inventoryMap) {
+        for (OrderLineItems item : orderLineItems) {
+            InventoryResponse inventoryData = inventoryMap.get(item.getSkuCode());
+
+            if (inventoryData == null) {
+                throw new OrderPlacementException("Product with SKU " + item.getSkuCode() + " does not exist in inventory.");
+            }
+            if (!inventoryData.isInStock() || inventoryData.getQuantity() < item.getQuantity()) {
+                throw new OrderPlacementException("Not enough stock for product with SKU: " + item.getSkuCode()
+                        + ". Requested: " + item.getQuantity() + ", Available: " + inventoryData.getQuantity());
             }
         }
-        // Validate quantity
-        boolean allInStock = orderLineItemsList.stream().allMatch(orderItem ->
-                Arrays.stream(inventoryResponses).anyMatch(inventoryItem ->
-                        inventoryItem.getSkuCode().equals(orderItem.getSkuCode()) &&
-                                inventoryItem.isInStock() &&
-                                inventoryItem.getQuantity() >= orderItem.getQuantity()
-                )
-        );
+    }
 
-        if (allInStock) {
-            orderRepo.save(order);
+    private void reduceStock(List<OrderLineItems> orderLineItems, String tenantId) {
+        List<OrderLineItemsDto> itemsToReduce = orderLineItems.stream()
+                .map(item -> new OrderLineItemsDto(item.getSkuCode(), item.getPrice(), item.getQuantity()))
+                .toList();
 
-            // --- CHANGE 3: USE THE CONFIGURED URL FOR REDUCE-STOCK ---
-            String reduceStockUri = UriComponentsBuilder.fromHttpUrl(inventoryServiceUrl)
-                    .path("/api/inventory/reduce-stock")
-                    .build().toUriString();
-
-            webClientBuilder.build().put()
-                    .uri(reduceStockUri)
-                    .header("X-Tenant-ID", tenantId)
-                    .bodyValue(orderLineItemsList)
-                    .retrieve()
-                    .bodyToMono(Void.class)
-                    .block();
-        } else {
-            throw new IllegalArgumentException("One or more products are out of stock or quantity is insufficient.");
-        }
+        webClientBuilder.build().put()
+                .uri("http://inventory-service/api/inventory/reduce-stock")
+                .header("X-Tenant-ID", tenantId)
+                .bodyValue(itemsToReduce)
+                .retrieve()
+                .onStatus(HttpStatusCode::isError, response ->
+                        Mono.error(new OrderPlacementException("Failed to update inventory stock. Order has been rolled back.")))
+                .bodyToMono(Void.class)
+                .block();
     }
 
     public List<Order> getAllOrders(String tenantId) {
@@ -114,7 +114,7 @@ public class OrderService {
 
     public Order getOrderByOrderNumber(String orderNumber, String tenantId) {
         return orderRepo.findByOrderNumberAndTenantId(orderNumber, tenantId)
-                .orElseThrow(() -> new RuntimeException("Order not found with order number: " + orderNumber));
+                .orElseThrow(() -> new OrderNotFoundException("Order not found with order number: " + orderNumber));
     }
 
     public List<Order> getOrdersBySkuCode(String skuCode, String tenantId) {
@@ -123,16 +123,16 @@ public class OrderService {
 
     public List<Order> getRecentOrders(int limit, String tenantId) {
         return orderRepo.findByTenantId(tenantId).stream()
-                .sorted((a, b) -> Long.compare(b.getId(), a.getId())) // newest first
+                .sorted((a, b) -> b.getId().compareTo(a.getId())) // newest first
                 .limit(limit)
                 .toList();
     }
 
-    private OrderLineItems mapToDto(OrderLineItemsDto dto) {
+    private OrderLineItems mapToEntity(OrderLineItemsDto dto) {
         OrderLineItems item = new OrderLineItems();
-        item.setPrice(dto.getPrice());
-        item.setQuantity(dto.getQuantity());
-        item.setSkuCode(dto.getSkuCode());
+        item.setPrice(dto.price());
+        item.setQuantity(dto.quantity());
+        item.setSkuCode(dto.skuCode());
         return item;
     }
 }
